# autora-core

./: .gitignore  .pre-commit-config.yaml  .tool-versions  CONTRIBUTE.md  README.md  conftest.py  mkdocs.yml  pyproject.toml  requirements.txt  test.py
.github/: dependabot.yml
.github/workflows/: docs-publish.yml  publish-package-pypi.yml  test-poetry-build.yml  test-pre-commit-hooks.yml  test-pypi-build.yml  test-pytest.yml
docs/: States with History.ipynb  The State Mechanism.ipynb  Variable.ipynb  accessing-state-dependent-properties.ipynb  basic-usage.ipynb  index.md  passing-static-parameters.ipynb  quickstart.md  using-alternative-planners-and-executors.ipynb
docs/cli/: index.md  using-workflow-with-cylc.md
docs/cli/basic-usage/: README.ipynb  README.md  Read Me.ipynb  Readme.ipynb  controller.yml  example.ipynb  index.ipynb  index.md  lib.py  plot.py
docs/cli/basic-usage/example/: __init__.py
docs/cli/custom-function-with-cylc/: README.md
docs/cli/cylc-pip/: README.md  requirements.txt
docs/cli/cylc-slurm-pip/: README.md
docs/cli/with-cylc/: README.md  environment.yml  example.ipynb  flow.cylc
docs/cli/with-cylc-conda/: README.md  environment.yml  flow.cylc  index.ipynb  index.md
docs/cli/with-cylc-pip/: README.md  flow.cylc  index.md  requirements.txt
docs/cli/with-cylc-slurm/: README.md  controller.yml  flow.cylc  global.cylc  index.md
docs/cli/with-cylc-slurm-pip/: README.md  flow.cylc
docs/cycle/: Basic Introduction to Functions and States.ipynb  Combining Experimentalists with State.ipynb  Dynamically Extending and Altering the State.ipynb  Function Naming Convention Options.ipynb  Linear and Cyclical Workflows using Functions and States.ipynb
docs/experimentalists/grid/: index.md  quickstart.md
docs/experimentalists/random/: index.md  quickstart.md
docs/interactive/: Accessing State Dependent Properties.ipynb  Basic Usage.ipynb  Functional Cycle with Custom State.ipynb  Functional Cycle with Delta State.ipynb  Functional Cycle, Delta State, Custom Executors.ipynb  Functional Cycle.ipynb  Linear and Cyclical Workflows using Functions and States.ipynb  Passing Static Parameters.ipynb  Saving And Loading Dill.ipynb  Saving And Loading With Dill.ipynb  Using Alternative Planners And Executors.ipynb  accessing-state-dependent-properties.ipynb  saving-and-loading-dill.ipynb  using-alternative-planners-and-executors.ipynb
docs/interactive/saving-and-loading/: controller.yml  default-controller.yml  index.md  lib.py  local-function-controller.dill  simple-controller.yml
docs/pipeline/: Experimentalist Pipeline Examples.ipynb  Experimentalist Pipeline.ipynb
examples/cylc-conda/: README.md  flow.cylc
examples/cylc-pip/: README.md  flow.cylc  requirements.txt
examples/cylc-slurm-pip/: README.md  flow.cylc  requirements.txt
examples/state-pip/: README.md  components.py
mkdocs/: base.yml
project/bms/: bms_with_state.ipynb
project/cycle/: mixture-bms-cycle.ipynb
project/equation_sampler/: runner-from-equations.ipynb  sample-equations.ipynb
project/mixture-experimentalist/: mixture-experimentalist.ipynb  mixture-experimentalist.py  test_mixture_on_state.ipynb
src/autora/: state.py  state_history_dataclass.py  state_history_delta.py  state_history_delta_alternative.py  state_history_delta_standard.py  state_history_freeform.py  state_history_linear.py  state_history_recursive.py  state_history_state.py
src/autora/cycle/: simple.py
src/autora/experimentalist/: consensus.ipynb  grid.py  grid_.py  random_.py  utils.py
src/autora/serializer/: __init__.py  _yaml.py
src/autora/state/: __init__.py  bundled.py  delta.py  history.py  param.py  protocol.py  snapshot.py  standard.py  wrapper.py
src/autora/synthetic/: inventory.py
src/autora/utils/: conversion.py  deprecation.py  metrics.py  transform.py
src/autora/variable/: __init__.py
src/autora/workflow/: __init__.py  __main__.py  base.py  controller.py  cycle.py  delta_pipeline.ipynb  executor.py  pipeline.py  planner.py  plotting.py  protocol.py  wrapper.py
src/autora/workflow_/: __init__.py  executor.py  state.py  wrapper.py
src/autora_workflow/: __main__.py  cycle.py  executor.py  planner.py
src/autora_workflow/serializer/: __init__.py
src/autora_workflow/state/: history.py  param.py  snapshot.py
tests/: _example_workflow_library.py  _superscript.py  strategies.py  test_cli.py  test_controller_plots.py  test_cycle_plots.py  test_experimentalist_pipeline.py  test_experimentalist_random.py  test_load_dump_state.py  test_serializer.py  test_state.py  test_strategies.py  test_synthetic_inventory.py  test_system.py  test_unit.py  test_utils_deprecation.py  test_variable.py  test_workflow.py
(+29 files in other folders)
