[project]
name = "autora-workflow"
description = "Workflow tools for the Autonomous Research Assistant (AutoRA) package."
authors = [
    { name = "John Gerrard Holland", email = "john_holland1@brown.edu" }
]
dynamic = ["version"]

readme = "docs/index.md"
license = { text = "MIT License" }

dependencies = [
    "autora-core>=3.3.0",
    "scikit-learn",
    "matplotlib",
    "pandas",
    "typer[all]",
    "dill",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "autora-core[dev]",
    "autora-workflow[docs]",
    "autora-workflow[test]",
]
docs = [
    "autora-core[docs]"
]
test = [
    "autora-core[test]",
    "autora-experimentalist-sampler-model-disagreement",
]
cylc = [
    "cylc-flow",
    "cylc-uiserver"
]

[project.urls]
homepage = "http://www.empiricalresearch.ai/"
repository = "https://github.com/AutoResearch/autora-workflow"
documentation = "https://hollandjg.github.io/autora-workflow/"

[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.isort]
profile = "black"
known_first_party = ["autora"]
