[project]
name = "autora-core"
description = "Autonomous Research Assistant (AutoRA) is a framework for automating steps of the empirical research process. "
authors = [
    { name="Sebastian Musslick", email="sebastian_musslick@brown.edu" },
    { name="John Gerrard Holland", email="john_holland1@brown.edu" },
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8,<4"
dynamic = ["version"]

classifiers = [  # Optional
  "Development Status :: 5 - Production/Stable",

  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",

  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "scikit-learn",
    "typer[all]",
]


[project.optional-dependencies]
dev = [
    "autora-core[test]",
    "autora-core[build]",
    "autora-core[notebook]",
    "autora-core[docs]",
]
test = [
    "pytest",
    "hypothesis[pandas]",
    "autora-core[serializers]"
]
build = [
    "build",
    "twine",
    "flake8",
    "pre-commit",
]
notebook = [
    "jupyter",
    "ipython",
    "ipywidgets",
]
docs = [
    "mkdocs-material",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
    "mkdocs-multirepo-plugin",
    "mkdocstrings-python",
    "mkdocs-jupyter",
    "pymdown-extensions",
]
serializers = [
    "dill",
    "pyyaml"
]
cylc = [
    "cylc-flow",
    "cylc-uiserver"
]

[tool.isort]
profile = "black"
known_first_party = ["autora"]

[tool.mypy]
mypy_path="./src"

[[tool.mypy.overrides]]
module = ["matplotlib.*", "sklearn.*", "pandas.*", "numpy.*"]
ignore_missing_imports=true

[project.urls]
homepage = "http://www.empiricalresearch.ai"
repository = "https://github.com/AutoResearch/autora-core"
documentation = "https://autoresearch.github.io/autora/"


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules --import-mode importlib"
pythonpath = "tests"
